tests/typechecker/should_fail/ambiguous_module_datatypes.csp
module M(X)
datatype C = Y.X
exports
endmodule

instance N = M({})
